deployments/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubtest
spec:
  containers:
  - name: ubuntu
    image: ubuntu
